Add read-only view for Music Random Sequence Containers

--- a/SoundbankEditor/SpecificHircItemEditorViews/SpecificHircItemEditorView.xaml
+++ b/SoundbankEditor/SpecificHircItemEditorViews/SpecificHircItemEditorView.xaml
@@ -42,6 +42,9 @@
 			<DataTemplate DataType="{x:Type hircItems:CakDialogueEvent}">
 				<local:DialogueEventHircItemEditorView HircItemUpdated="OnHircItemUpdated" />
 			</DataTemplate>
+			<DataTemplate DataType="{x:Type hircItems:CAkMusicRanSeqCntr}">
+				<local:MusicRandomSequenceContainerHircItemEditorView HircItemUpdated="OnHircItemUpdated" />
+			</DataTemplate>
 			<DataTemplate DataType="{x:Type hircItems:CAkRanSeqCntr}">
 				<local:RandomSequenceContainerHircItemEditorView HircItemUpdated="OnHircItemUpdated" />
 			</DataTemplate>
